--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,23 @@
+    {% load staticfiles %}
     <html>
         <head>
-            <title>IT-girl's blog</title>
+            <title>Django Girls blog</title>
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+            <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
         </head>
         <body>
             <div>
-                <h1><a href="">Django Girls Blog</a></h1>
+                <h1><a href="/">Django Girls Blog</a></h1>
             </div>
 
-            <div>
-                <p>published: 29.05.2016, 16:10</p>
-                <h2><a href="">My first post</a></h2>
-                <p>Hello, World</p>
-            </div>
-
-            <div>
-                <p>published: 29.05.2016, 16:21</p>
-                <h2><a href="">My second post</a></h2>
-                <p>django girl #tceh Moscow Python</p>
-            </div>
+            {% for post in posts %}
+                <div>
+                    <p>published: {{ post.published_date }}</p>
+                    <h1><a href="">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaks }}</p>
+                </div>
+            {% endfor %}
         </body>
     </html>
